--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,14 +5,16 @@ events {
 }
 
 http {
+    error_log /home/7byte/openresty-test/logs/error.log info;
+    access_log /home/7byte/openresty-test/logs/access.log;
+
+    #init_worker_by_lua_file /home/7byte/openresty-test/src/testTimer.lua;
+
     server {
     #监听端口，若你的6699端口已经被占用，则需要修改
     listen 6699;
     lua_code_cache on;
         
-    error_log /home/7byte/openresty-test/logs/error.log info;
-    access_log /home/7byte/openresty-test/logs/access.log;
-
     gzip            on;
     gzip_min_length 1000;
     gzip_proxied    expired no-cache no-store private auth;
@@ -40,6 +42,6 @@ http {
         }
     location /testProxy{ 
             proxy_pass http://music.baidu.com/; 
-        }
+        } 
     }
 }
