--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,11 +10,19 @@ http {
 
     #init_worker_by_lua_file /home/7byte/openresty-test/src/testTimer.lua;
 
+    lua_package_path "/home/7byte/openresty-test/src/?.lua;;";
+
+    lua_shared_dict my_cache 128m;
+    
+    #open_file_cache max=204800 inactive=60s;
+    #open_file_cache_min_uses 1;
+    #open_file_cache_valid 30s;
+        
     server {
     #监听端口，若你的6699端口已经被占用，则需要修改
     listen 6699;
     lua_code_cache on;
-        
+
     gzip            on;
     gzip_min_length 1000;
     gzip_proxied    expired no-cache no-store private auth;
@@ -42,6 +50,29 @@ http {
         }
     location /testProxy{ 
             proxy_pass http://music.baidu.com/; 
+        }
+
+    location /file {
+            alias /home/7byte/openresty-test/files; 
         } 
+
+    location = /hdl {
+            content_by_lua 'return ngx.exec("/file/hdl.jpg")';
+        }
+    location = /cjml {
+            content_by_lua 'return ngx.exec("/file/cjml.jpg")';
+        }
+    location = /str {
+            content_by_lua 'return ngx.exec("/file/getRank.json")';
+        }
+    location = /getFieldInfo {
+            content_by_lua 'return ngx.exec("/file/getFieldInfo.json")';
+        }
+    location = /testLrucache {
+            content_by_lua_file /home/7byte/openresty-test/src/testLrucache.lua;
+        }
+    location = /testSharedDICT {
+            content_by_lua_file /home/7byte/openresty-test/src/testSharedDICT.lua;
+        }
     }
 }
