测试init_worker_by_lua*

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,12 +5,17 @@ events {
 }
 
 http {
+
+    upstream testUpstream{
+        server 127.0.0.1:6699;
+    }
+
     error_log /home/7byte/openresty-test/logs/error.log info;
     access_log /home/7byte/openresty-test/logs/access.log;
 
-    #init_worker_by_lua_file /home/7byte/openresty-test/src/testTimer.lua;
-
     lua_package_path "/home/7byte/openresty-test/src/?.lua;;";
+
+    init_worker_by_lua_file /home/7byte/openresty-test/src/testTimer.lua;
 
     lua_shared_dict my_cache 128m;
     
@@ -18,60 +23,79 @@ http {
     #open_file_cache_min_uses 1;
     #open_file_cache_valid 30s;
         
+
     server {
-    #监听端口，若你的6699端口已经被占用，则需要修改
-    listen 6699;
-    lua_code_cache on;
+        listen  80;
+        access_log   /home/7byte/openresty-test/logs/re.access.log;
+        error_log    /home/7byte/openresty-test/logs/re.error.log info;
+    
+        location / {
+            proxy_pass         http://testUpstream;
+            proxy_set_header   Host             $host;
+            proxy_set_header   X-Real-IP        $remote_addr;
+            proxy_set_header   REMOTE-ADDR      $remote_addr;
+            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        }
+    }
 
-    gzip            on;
-    gzip_min_length 1000;
-    gzip_proxied    expired no-cache no-store private auth;
-    gzip_types      text/plain application/xml;
-    #gzip_comp_level 9;
+    server {
+        #监听端口，若你的6699端口已经被占用，则需要修改
+        listen 6699;
+        lua_code_cache on;
 
-    location / {
+        gzip            on;
+        gzip_min_length 1000;
+        gzip_proxied    expired no-cache no-store private auth;
+        gzip_types      text/plain application/xml;
+        #gzip_comp_level 9;
+
+        location / {
             default_type text/html;
-
             content_by_lua_block {
                 ngx.say("I have a dream!")
             }
         }
-    location /test {
+        location /test {
             default_type text/html;
             content_by_lua_file /home/7byte/openresty-test/src/test.lua;
         }
-    location /testTime {
+        location /testTime {
             default_type text/html;
             content_by_lua_file /home/7byte/openresty-test/src/testTime.lua;
         }
-    location /testMysql {
+        location /testMysql {
             default_type text/html;
             content_by_lua_file /home/7byte/openresty-test/src/testMysql.lua;
         }
-    location /testProxy{ 
+        location /testProxy{ 
             proxy_pass http://music.baidu.com/; 
         }
+        location /testProxyIP{
+            content_by_lua_file /home/7byte/openresty-test/src/testProxyIP.lua;
+            #echo $binary_http_x_real_ip;
+        }
 
-    location /file {
+        location /file {
             alias /home/7byte/openresty-test/files; 
         } 
 
-    location = /hdl {
+        location = /hdl {
             content_by_lua 'return ngx.exec("/file/hdl.jpg")';
         }
-    location = /cjml {
+        location = /cjml {
             content_by_lua 'return ngx.exec("/file/cjml.jpg")';
         }
-    location = /str {
+        location = /str {
+            charset UTF-8;
             content_by_lua 'return ngx.exec("/file/getRank.json")';
         }
-    location = /getFieldInfo {
+        location = /getFieldInfo {
             content_by_lua 'return ngx.exec("/file/getFieldInfo.json")';
         }
-    location = /testLrucache {
+        location = /testLrucache {
             content_by_lua_file /home/7byte/openresty-test/src/testLrucache.lua;
         }
-    location = /testSharedDICT {
+        location = /testSharedDICT {
             content_by_lua_file /home/7byte/openresty-test/src/testSharedDICT.lua;
         }
     }
